# server/openapi.json
@@ -24,7 +24,7 @@
           "description": {
             "type": "string"
           },
-          "item_price_number": {
+          "item_price_string": {
             "type": "number"
           },
           "created_at": {
@@ -59,12 +59,7 @@
             "nullable": true
           }
         },
-        "required": [
-          "id",
-          "user_id",
-          "order_item_name",
-          "order_date"
-        ]
+        "required": ["id", "user_id", "order_item_name", "order_date"]
       }
     },
     "parameters": {}
@@ -92,10 +87,7 @@
                       }
                     }
                   },
-                  "required": [
-                    "status",
-                    "data"
-                  ]
+                  "required": ["status", "data"]
                 }
               }
             }
@@ -125,10 +117,7 @@
                       }
                     }
                   },
-                  "required": [
-                    "status",
-                    "data"
-                  ]
+                  "required": ["status", "data"]
                 }
               }
             }
